--- a/epan/Makefile.nmake
+++ b/epan/Makefile.nmake
@@ -84,6 +84,13 @@ clean:
 	$(MAKE) /$(MAKEFLAGS) -f Makefile.nmake clean
 	cd ..
 
+#
+# We remove "radius_dict.c" with "distclean" because it needs different
+# #includes for UN*X and Windows (UN*X versions of Flex make it include
+# <unistd.h>, but that's a UN*X-only header), so if you're going to build
+# from source, you need to build "radius_dict.c" from "radius_dict.l"
+# with Flex.
+#
 distclean: clean
 	rm -f config.h register.c mkstemp.c strptime.c radius_dict.c
 	cd ftypes
