verify_tools: - not only look for the cygwin tools, but also check the MSVC tools required like cl.exe, link.exe and nmake.exe
- I don't know why we should use /usr/bin/find but simply find, check for it instead. If there's a reason to use /usr/bin/find, we should use $(FIND) instead but I currently don't see a reason for this

svn path=/trunk/; revision=15220

--- a/Makefile.nmake
+++ b/Makefile.nmake
@@ -403,12 +403,15 @@ doxygen: doxygen.cfg doxygen-run
 ################################################################################
 
 REQUIRED_TOOLS=\
+	$(CC) \
+	$(LINK) \
+	nmake \
 	$(SH)	\
 	$(YACC)	\
 	$(LEX)	\
 	env	\
 	grep	\
-	/usr/bin/find	\
+	find	\
 	$(PERL)	\
 	$(PYTHON)	\
 	sed	\
