--- a/packaging/nsis/Makefile.am
+++ b/packaging/nsis/Makefile.am
@@ -8,5 +8,5 @@ EXTRA_DIST = \
 	servicelib.nsh \
 	AdditionalTasksPage.ini \
 	WinPcapPage.ini \
-	WinPcap_3_1_beta4.exe \
+	WinPcap_3_1.exe \
 	Makefile.nmake
