Prep for the final release.
svn path=/trunk-1.0/; revision=17977

--- a/docbook/Makefile
+++ b/docbook/Makefile
@@ -26,7 +26,7 @@ HHC="/cygdrive/c/Program Files/HTML Help Workshop/hhc.exe"
 # elinks (text version of release notes)
 # This could also be "lynx", or "true" if neither elinks nor lynx is installed
 #ELINKS=elinks
-ELINKS="true"
+ELINKS=elinks
 
 ############### YOU SHOULDN'T HAVE TO EDIT ANYTHING BELOW THIS LINE! ################
 
