--- a/packaging/nsis/Makefile.nmake
+++ b/packaging/nsis/Makefile.nmake
@@ -92,7 +92,7 @@ PLUGINS=../../plugins/acn/acn.dll \
 	../../plugins/stats_tree/stats_tree.dll \
 	../../plugins/v5ua/v5ua.dll
 
-NSI=ethereal.nsi \
+NSI=wireshark.nsi \
 	GetWindowsVersion.nsh \
 	servicelib.nsh \
 	AdditionalTasksPage.ini \
@@ -150,7 +150,7 @@ $(DEST)-setup-$(VERSION).exe : $(NSI) $(DELIVERABLES) Makefile.nmake
 !IFDEF LUA_DIR
 	/DLUA_DIR=$(LUA_DIR) \
 !ENDIF
-	ethereal.nsi
+	wireshark.nsi
 
 clean:
 	rm -f wireshark-setup-$(VERSION).exe
