Copy over more name changes:
r18260:
User: gerald
Date: 2006/05/31 12:23 AM

Log:
 libethereal -> libwireshark.  idl2eth -> idl2wrs.  There are a _lot_ of
 changes here.  It compiles OK on OS X, but hasn't been tested anywhere else.

r18266:
User: gerald
Date: 2006/05/31 03:00 PM

Log:
 Fix building idl2wrs (after looking through previous versions of Makefile.am
 it's not apparent how it was working before).


svn path=/trunk-1.0/; revision=18275

--- a/image/Makefile.nmake
+++ b/image/Makefile.nmake
@@ -18,10 +18,10 @@ ethereal.rc   : win32-file-dlg.rc ethereal.rc.in wireshark.exe.manifest ..\confi
 		-e s/@RC_VERSION@/$(RC_VERSION)/ \
 		< ethereal.rc.in > $@
 
-libethereal.rc: libethereal.rc.in ..\config.nmake
+libwireshark.rc: libwireshark.rc.in ..\config.nmake
 	sed -e s/@VERSION@/$(VERSION)/ \
 		-e s/@RC_VERSION@/$(RC_VERSION)/ \
-		< libethereal.rc.in > $@
+		< libwireshark.rc.in > $@
 
 tethereal.rc  : tethereal.rc.in ..\config.nmake
 	sed -e s/@VERSION@/$(VERSION)/ \
