--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -71,6 +71,7 @@ EXTRA_DIST = \
 	cvsdiff-fix.py					\
 	dfilter-test.py 				\
 	fuzz-test.sh					\
+	idl2wrs.sh					\
 	lex.py						\
 	msnchat						\
 	netscreen2dump.py				\
