--- a/Makefile.nmake
+++ b/Makefile.nmake
@@ -66,8 +66,8 @@ tethereal_LIBS= wiretap\wiretap-$(WTAP_VERSION).lib \
 	wsock32.lib user32.lib \
 	$(GLIB_LIBS) \
 	$(NET_SNMP_DIR)\win32\lib\release\netsnmp.lib \
-!IFDEF ENABLE_LIBETHEREAL
-	epan\libethereal.lib \
+!IFDEF ENABLE_LIBWIRESHARK
+	epan\libwireshark.lib \
 !ELSE
 	epan\dissectors\dissectors.lib \
 	epan\ethereal.lib \
@@ -98,8 +98,8 @@ dftest_LIBS=  wiretap\wiretap-$(WTAP_VERSION).lib \
 	wsock32.lib user32.lib \
 	$(GLIB_LIBS) \
 	$(NET_SNMP_DIR)\win32\lib\release\netsnmp.lib \
-!IFDEF ENABLE_LIBETHEREAL
-	epan\libethereal.lib \
+!IFDEF ENABLE_LIBWIRESHARK
+	epan\libwireshark.lib \
 !ELSE
 	epan\dissectors\dissectors.lib \
 	epan\ethereal.lib \
@@ -118,7 +118,7 @@ randpkt_LIBS= wiretap\wiretap-$(WTAP_VERSION).lib \
 EXECUTABLES=ethereal.exe ethereal-gtk2.exe tethereal.exe \
 	capinfos.exe editcap.exe mergecap.exe text2pcap.exe randpkt.exe dumpcap.exe
 
-RESOURCES=image\ethereal.res image\libethereal.res image\tethereal.res \
+RESOURCES=image\ethereal.res image\libwireshark.res image\tethereal.res \
 	image\capinfos.res image\editcap.res image\mergecap.res \
 	image\text2pcap.res image\wiretap.res image\dumpcap.res
 
@@ -291,7 +291,7 @@ clean: gtk2_distclean
 		AUTHORS-SHORT-FORMAT \
 		dftest.obj dftest.exe randpkt.obj randpkt.ext dumpcap.obj \
 		doxygen.cfg \
-		$(RESOURCES) libethereal.dll wiretap-$(WTAP_VERSION).dll
+		$(RESOURCES) libwireshark.dll wiretap-$(WTAP_VERSION).dll
 	cd asn1
 	$(MAKE) /$(MAKEFLAGS) -f Makefile.nmake clean
 	cd ..
@@ -656,8 +656,8 @@ install-gtk1-deps: install-required-deps
 install-required-deps:
 	set copycmd=/y
 	xcopy wiretap\wiretap-$(WTAP_VERSION).dll . /d
-!IFDEF ENABLE_LIBETHEREAL
-	xcopy epan\libethereal.dll . /d
+!IFDEF ENABLE_LIBWIRESHARK
+	xcopy epan\libwireshark.dll . /d
 !ENDIF
 	xcopy $(GLIB_DIR)\bin\libglib-2.0-0.dll . /d
 	xcopy $(GLIB_DIR)\bin\libgmodule-2.0-0.dll . /d
