--- a/image/libwireshark.rc.in
+++ b/image/libwireshark.rc.in
@@ -1,9 +1,5 @@
 #include "winver.h"
 
-#include "image/win32-file-dlg.rc"
-
-WIRESHARK_ICON		ICON			"wireshark.ico"
-
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION @RC_VERSION@,0
  PRODUCTVERSION @RC_VERSION@,0
@@ -21,13 +17,13 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "The Wireshark developer community, http://www.ethereal.com/\0"
-            VALUE "FileDescription", "Ethereal\0"
+            VALUE "CompanyName", "The Wireshark developer community, http://www.wireshark.org/\0"
+            VALUE "FileDescription", "Wireshark dissector library\0"
             VALUE "FileVersion", "@VERSION@\0"
-            VALUE "InternalName", "Ethereal @VERSION@\0"
+            VALUE "InternalName", "libwireshark @VERSION@\0"
             VALUE "LegalCopyright", "Copyright © 2000 Gerald Combs <gerald@wireshark.org>, Gilbert Ramirez <gram@alumni.rice.edu> and others\0"
-            VALUE "OriginalFilename", "Ethereal.exe\0"
-            VALUE "ProductName", "Ethereal\0"
+            VALUE "OriginalFilename", "libwireshark.dll\0"
+            VALUE "ProductName", "Wireshark\0"
             VALUE "ProductVersion", "@VERSION@\0"
         END
     END
@@ -36,8 +32,3 @@ BEGIN
         VALUE "Translation", 0x409, 1200
     END
 END
-
-#define MANIFEST_RESOURCE_ID 1
-#define RT_MANIFEST 24
-
-MANIFEST_RESOURCE_ID RT_MANIFEST "ethereal.exe.manifest"
