--- a/asn1/h245/Makefile.nmake
+++ b/asn1/h245/Makefile.nmake
@@ -13,16 +13,20 @@ all: generate_dissector
 
 generate_dissector: $(DISSECTOR_FILES)
 
-$(DISSECTOR_FILES): ../../tools/asn2eth.py $(PROTOCOL_NAME).asn $(PROTOCOL_NAME).cnf packet-$(PROTOCOL_NAME)-template.c packet-$(PROTOCOL_NAME)-template.h
+$(DISSECTOR_FILES): ../../tools/asn2wrs.py  MULTIMEDIA-SYSTEM-CONTROL.asn $(PROTOCOL_NAME).cnf packet-$(PROTOCOL_NAME)-template.c packet-$(PROTOCOL_NAME)-template.h
 !IFDEF PYTHON
-	$(PYTHON) ../../tools/asn2eth.py -X -e -p $(PROTOCOL_NAME) -c $(PROTOCOL_NAME).cnf -s packet-$(PROTOCOL_NAME)-template $(PROTOCOL_NAME).asn
+	$(PYTHON) ../../tools/asn2wrs.py -e -p $(PROTOCOL_NAME) -c $(PROTOCOL_NAME).cnf -s packet-$(PROTOCOL_NAME)-template  MULTIMEDIA-SYSTEM-CONTROL.asn
 !ELSE
-	@echo Error: You need Python to use asn2eth.py
+	@echo Error: You need Python to use asn2wrs.py
 	@exit 1
 !ENDIF
 
 clean:
 	rm -f parsetab.py parsetab.pyc $(DISSECTOR_FILES)
+
+distclean: clean
+
+maintainer-clean: distclean
 
 # Fix EOL in generated dissectors. Cygwin's python generates files with 
 # mixed EOL styles, which can't be commited to the SVN repository.
