--- a/asn1/h450/Makefile.nmake
+++ b/asn1/h450/Makefile.nmake
@@ -13,16 +13,20 @@ all: generate_dissector
 
 generate_dissector: $(DISSECTOR_FILES)
 
-$(DISSECTOR_FILES): ../../tools/asn2eth.py h4501.asn packet-$(PROTOCOL_NAME)-template.c packet-$(PROTOCOL_NAME)-template.h $(PROTOCOL_NAME).cnf
+$(DISSECTOR_FILES): ../../tools/asn2wrs.py h4501.asn packet-$(PROTOCOL_NAME)-template.c packet-$(PROTOCOL_NAME)-template.h $(PROTOCOL_NAME).cnf
 !IFDEF PYTHON
-	$(PYTHON) ../../tools/asn2eth.py -X -e -p h450 -c h450.cnf -s packet-h450-template h4501.asn
+	$(PYTHON) ../../tools/asn2wrs.py -e -p h450 -c h450.cnf -s packet-h450-template h4501.asn
 !ELSE
-	@echo Error: You need Python to use asn2eth.py
+	@echo Error: You need Python to use asn2wrs.py
 	@exit 1
 !ENDIF
 
 clean:
 	rm -f parsetab.py parsetab.pyc $(DISSECTOR_FILES)
+
+distclean: clean
+
+maintainer-clean: distclean
 
 # Fix EOL in generated dissectors. Cygwin's python generates files with 
 # mixed EOL styles, which can't be commited to the SVN repository.
